# BitNet-b158

./: .gitignore  README.md  pyproject.toml
bitnet/: bitnet.py
example/: 01_bit_llama_pretraining.ipynb  02_bit_llama_b158_pretraining.ipynb
mybitnet/: __init__.py
mybitnet/bitnet/: __init__.py  bitnet.py  replace_linears.py
mybitnet/bitnet/models/bit_llama/: __init__.py  modeling_bit_llama.py  tokenization_bit_llama.py
mybitnet/bitnet/trainers/: __init__.py  bit_llama_trainer.py
